Closed Bug 1653839 Opened 5 years ago Closed 5 years ago

Perma [tier2] /builds/worker/workspace/obj-build/dist/include/mozilla/dom/RTCCertificate.h:21:10: fatal error: 'mozilla/dom/RTCCertificateBinding.h' file not found

Categories

(Firefox :: Security, defect, P5)

defect

Tracking

()

RESOLVED FIXED
Firefox 80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox78 --- unaffected
firefox79 --- unaffected
firefox80 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: prathiksha)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: ccoroiu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=310290446&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/R7UFf8_OSEqGgK1bXY1a1Q/runs/0/artifacts/public/logs/live_backing.log


task 2020-07-19T09:17:56.717Z] 09:17:56 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/security/sandbox'
[task 2020-07-19T09:17:56.717Z] 09:17:56 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/security/sandbox'
[task 2020-07-19T09:17:56.718Z] 09:17:56 INFO - security/sandbox/platform_thread_win.o
[task 2020-07-19T09:17:56.718Z] 09:17:56 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/security/sandbox'
[task 2020-07-19T09:17:56.719Z] 09:17:56 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/docshell/base'
[task 2020-07-19T09:17:56.723Z] 09:17:56 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -std=gnu++17 -o Unified_cpp_docshell_base0.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/docshell/base -I/builds/worker/workspace/obj-build/docshell/base -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/checkouts/gecko/docshell/shistory -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/bindings -I/builds/worker/checkouts/gecko/js/xpconnect/src -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/checkouts/gecko/netwerk/protocol/viewsource -I/builds/worker/checkouts/gecko/toolkit/components/browser -I/builds/worker/checkouts/gecko/toolkit/components/find -I/builds/worker/checkouts/gecko/tools/profiler -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Wno-error=shadow -fexperimental-new-pass-manager -MD -MP -MF .deps/Unified_cpp_docshell_base0.o.pp Unified_cpp_docshell_base0.cpp
[task 2020-07-19T09:17:56.723Z] 09:17:56 INFO - In file included from Unified_cpp_docshell_base0.cpp:101:
[task 2020-07-19T09:17:56.724Z] 09:17:56 INFO - In file included from /builds/worker/checkouts/gecko/docshell/base/nsDocShell.cpp:84:
[task 2020-07-19T09:17:56.724Z] 09:17:56 INFO - /builds/worker/workspace/obj-build/dist/include/mozilla/dom/RTCCertificate.h:21:10: fatal error: 'mozilla/dom/RTCCertificateBinding.h' file not found
[task 2020-07-19T09:17:56.725Z] 09:17:56 INFO - #include "mozilla/dom/RTCCertificateBinding.h"
[task 2020-07-19T09:17:56.725Z] 09:17:56 INFO - ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2020-07-19T09:17:56.725Z] 09:17:56 INFO - 1 error generated.
[task 2020-07-19T09:17:56.726Z] 09:17:56 ERROR - make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:748: Unified_cpp_docshell_base0.o] Error 1
[task 2020-07-19T09:17:56.726Z] 09:17:56 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/docshell/base'
[task 2020-07-19T09:17:56.726Z] 09:17:56 ERROR - make[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: docshell/base/target-objects] Error 2
[task 2020-07-19T09:17:56.727Z] 09:17:56 INFO - make[3]: *** Waiting for unfinished jobs....
[task 2020-07-19T09:17:56.727Z] 09:17:56 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2020-07-19T09:17:56.727Z] 09:17:56 INFO - config/external/icu/common/locmap.o
[task 2020-07-19T09:17:56.728Z] 09:17:56 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2020-07-19T09:17:56.806Z] 09:17:56 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2020-07-19T09:17:56.806Z] 09:17:56 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -std=gnu++17 -o loclikelysubtags.o -c -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DU_COMMON_IMPLEMENTATION -DU_USING_ICU_NAMESPACE=0 -DU_NO_DEFAULT_INCLUDE_UTF_HEADERS=1 -DU_HIDE_OBSOLETE_UTF_OLD_H=1 -DUCONFIG_NO_LEGACY_CONVERSION -DUCONFIG_NO_TRANSLITERATION -DUCONFIG_NO_REGULAR_EXPRESSIONS -DU_CHARSET_IS_UTF8 -DUNISTR_FROM_CHAR_EXPLICIT=explicit -DUNISTR_FROM_STRING_EXPLICIT=explicit -DU_ENABLE_DYLOAD=0 -DU_HAVE_NL_LANGINFO_CODESET=0 -DU_DEBUG=1 -I/builds/worker/checkouts/gecko/config/external/icu/common -I/builds/worker/workspace/obj-build/config/external/icu/common -I/builds/worker/checkouts/gecko/intl/icu/source/i18n -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -fno-strict-aliasing -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Wno-deprecated-declarations -Wno-type-limits -Wno-unused-but-set-variable -Wno-unused-function -Wno-sign-compare -Wno-maybe-uninitialized -frtti -fexperimental-new-pass-manager -MD -MP -MF .deps/loclikelysubtags.o.pp /builds/worker/checkouts/gecko/intl/icu/source/common/loclikelysubtags.cpp
[task 2020-07-19T09:17:56.806Z] 09:17:56 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2020-07-19T09:17:56.806Z] 09:17:56 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/config/external/icu/common'
[task 2020-07-19T09:17:56.806Z] 09:17:56 INFO - config/external/icu/common/locresdata.o

Flags: needinfo?(prathikshaprasadsuman)
Regressed by: 1617987
Has Regression Range: --- → yes
Keywords: regression
Summary: Intermittent /builds/worker/workspace/obj-build/dist/include/mozilla/dom/RTCCertificate.h:21:10: fatal error: 'mozilla/dom/RTCCertificateBinding.h' file not found → Perma /builds/worker/workspace/obj-build/dist/include/mozilla/dom/RTCCertificate.h:21:10: fatal error: 'mozilla/dom/RTCCertificateBinding.h' file not found
Summary: Perma /builds/worker/workspace/obj-build/dist/include/mozilla/dom/RTCCertificate.h:21:10: fatal error: 'mozilla/dom/RTCCertificateBinding.h' file not found → Perma [tier2] /builds/worker/workspace/obj-build/dist/include/mozilla/dom/RTCCertificate.h:21:10: fatal error: 'mozilla/dom/RTCCertificateBinding.h' file not found

Set release status flags based on info from the regressing bug 1617987

This seems to fail only on mingw builds. How strange...

Flags: needinfo?(tom)

(In reply to :dmajor from comment #6)

Ah, I see: the webidl file is behind MOZ_WEBRTC: https://searchfox.org/mozilla-central/rev/3b6958c26049c1e27b2790a43154caaba9f6dd4a/dom/webidl/moz.build#990,995

and this also explains the failure on s390x (from bug 1653967), there is no WebRTC for s390x IIRC

It's not clear to me why bug 1617987 needs RTCCertificate.h, the change doesn't seem related to webrtc, maybe was it a typo for some other SomethingCertificate.h?

Flags: needinfo?(tom)

That header shouldn't be necessary at all.

Right, including RTCCertificate.h looks as a mistake. Without the include I see

...
/usr/bin/clang++ -std=gnu++17 -o Unified_cpp_docshell_base0.o -c  -I/home/sharkcz/projects/firefox/obj-s390x-ibm-linux-gnu/dist/stl_wrappers -I/home/sharkcz/projects/firefox/obj-s390x-ibm-linux-gnu/dist/system_wrappers -include /home/sharkcz/projects/firefox/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/home/sharkcz/projects/firefox/docshell/base -I/home/sharkcz/projects/firefox/obj-s390x-ibm-linux-gnu/docshell/base -I/home/sharkcz/projects/firefox/obj-s390x-ibm-linux-gnu/ipc/ipdl/_ipdlheaders -I/home/sharkcz/projects/firefox/ipc/chromium/src -I/home/sharkcz/projects/firefox/ipc/glue -I/home/sharkcz/projects/firefox/docshell/shistory -I/home/sharkcz/projects/firefox/dom/base -I/home/sharkcz/projects/firefox/dom/bindings -I/home/sharkcz/projects/firefox/js/xpconnect/src -I/home/sharkcz/projects/firefox/layout/base -I/home/sharkcz/projects/firefox/layout/generic -I/home/sharkcz/projects/firefox/layout/style -I/home/sharkcz/projects/firefox/layout/xul -I/home/sharkcz/projects/firefox/netwerk/base -I/home/sharkcz/projects/firefox/netwerk/protocol/viewsource -I/home/sharkcz/projects/firefox/toolkit/components/browser -I/home/sharkcz/projects/firefox/toolkit/components/find -I/home/sharkcz/projects/firefox/tools/profiler -I/home/sharkcz/projects/firefox/obj-s390x-ibm-linux-gnu/dist/include -I/home/sharkcz/projects/firefox/obj-s390x-ibm-linux-gnu/dist/include/nspr -I/home/sharkcz/projects/firefox/obj-s390x-ibm-linux-gnu/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /home/sharkcz/projects/firefox/obj-s390x-ibm-linux-gnu/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wunreachable-code -Wunreachable-code-return -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wc++2a-compat -Wcomma -Wimplicit-fallthrough -Wunused-function -Wunused-variable -Wstring-conversion -Wtautological-overlap-compare -Wtautological-unsigned-enum-zero-compare -Wtautological-unsigned-zero-compare -Wno-error=tautological-type-limit-compare -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fno-strict-aliasing -fno-rtti -fno-exceptions -fno-math-errno -pthread -pipe -g -O2 -fno-omit-frame-pointer -funwind-tables -Wno-error=shadow -fexperimental-new-pass-manager  -MD -MP -MF .deps/Unified_cpp_docshell_base0.o.pp  -fcolor-diagnostics  Unified_cpp_docshell_base0.cpp
In file included from Unified_cpp_docshell_base0.cpp:101:
/home/sharkcz/projects/firefox/docshell/base/nsDocShell.cpp:5819:25: error: no member named 'GetXPCOMFromNSSError' in namespace 'mozilla::psm'
          mozilla::psm::GetXPCOMFromNSSError(SSL_ERROR_BAD_CERT_DOMAIN)) {
          ~~~~~~~~~~~~~~^
/home/sharkcz/projects/firefox/docshell/base/nsDocShell.cpp:5988:21: error: no member named 'GetXPCOMFromNSSError' in namespace 'mozilla::psm'
      mozilla::psm::GetXPCOMFromNSSError(SSL_ERROR_BAD_CERT_DOMAIN)) {
      ~~~~~~~~~~~~~~^
2 errors generated.

which can be fixed with

diff --git a/docshell/base/nsDocShell.cpp b/docshell/base/nsDocShell.cpp
index e5b2b74ee6..8545c44251 100644
--- a/docshell/base/nsDocShell.cpp
+++ b/docshell/base/nsDocShell.cpp
@@ -81,7 +81,7 @@
 #include "mozilla/net/DocumentChannel.h"
 #include "mozilla/net/ParentChannelWrapper.h"
 #include "mozilla/net/UrlClassifierFeatureFactory.h"
-#include "mozilla/dom/RTCCertificate.h"
+#include "NSSErrorsService.h"
 #include "ReferrerInfo.h"
 
 #include "nsIApplicationCacheChannel.h"
Assignee: nobody → prathikshaprasadsuman
Status: NEW → ASSIGNED
Flags: needinfo?(prathikshaprasadsuman)

The patch looks good to me.

Pushed by prathikshaprasadsuman@gmail.com: https://hg.mozilla.org/integration/autoland/rev/9acfeb35e742 Fix error 'mozilla/dom/RTCCertificateBinding.h' file not found on mingw builds. r=keeler
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: