Bug 1653839 - Fix error 'mozilla/dom/RTCCertificateBinding.h' file not found on mingw builds. r=keeler

Differential Revision: https://phabricator.services.mozilla.com/D84480